--- a/style/index.css
+++ b/style/index.css
@@ -53,12 +53,12 @@ table {
 
 /* CSS Reset End */
 
-*{
+/* *{
     box-sizing:border-box;
     padding:0;
     margin:0;
     border:1px solid grey;
-}
+} */
 
 h1 {
     font-size: 200%;
@@ -123,14 +123,24 @@ nav {
    .f {
        display:flex;
        flex-direction: row;
+       justify-content: space-between;
    }
 
    .container {
         padding: 20px;
-        width: 15%;
+        width: 200px;
+        height: 200px;
    }
 
    .g {
        display:flex;
+       flex-direction: row;
+       justify-content: space-between;
+   }
        
+   .h {
+       font-weight: 900;
+       text-align: center;
+       display: flex;
+       flex-direction: column;
    }
