--- a/style/index.css
+++ b/style/index.css
@@ -60,6 +60,10 @@ table {
     border:1px solid grey;
 }
 
+html {
+    font-size: 1.3rem;
+}
+
 h1 {
     font-size: 200%;
     padding: 30px 50px 0px 50px;
@@ -75,7 +79,7 @@ nav {
     padding:30px 20px 30px 70px;
     width:28%;
     height: auto;
-    display: inline-block;
+    display: flex;
 }
 
 h2 {
@@ -127,18 +131,17 @@ h2 {
     display: flex;
 }
 
-.c{
+.c {
     width: fit-content;
- display: flex;
- flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .d {
-    padding: 25px 50px 50px 50px;
-    width: 50%;
+    padding: 5.5%;
+    width: 60%;
     display: flex;
     flex-wrap: wrap; 
-    justify-content: space-between; 
    } 
 
    .f {
