--- a/style/index.css
+++ b/style/index.css
@@ -53,20 +53,21 @@ table {
 
 /* CSS Reset End */
 
-*{
+/* *{
     box-sizing:border-box;
     padding:0;
     margin:0;
     border:1px solid grey;
-}
+} */
 
 html {
     font-size: 1.3rem;
 }
 
 h1 {
+    text-shadow:5px 5px 10px black;
     font-size: 200%;
-    padding: 30px 50px 0px 50px;
+    padding: 1.5%;
     font-weight: 900;
 }
 
@@ -76,7 +77,7 @@ a {
 }
 
 nav {
-    padding:30px 20px 30px 70px;
+    padding:0 4%;
     width:28%;
     height: auto;
     display: flex;
@@ -85,21 +86,22 @@ nav {
 h2 {
     font-weight: 900;
     font-size: 200%;
-    width: 100%;
-    padding: 100px 400px 10px 50px;
+    width: 50%;
+    padding: 1% 25%;
 }
 
 .button {
-    color: rgb(192, 132, 3);
+    color: #FC4A1A ;
     padding: 5px 5px 5px 5px; 
-    background-color: #515554;
+    background-color:#49494b;
     border: 3px solid black;
 }
 .button2 {
-    margin: 0px 700px 0px 50px;
-    color: rgb(192, 132, 3);
-    padding: 2px 20px 2px 20px; 
-    background-color: #515554;
+    text-align: center;
+    margin: 1.5% 2.5%;
+    color: #FC4A1A;
+    padding: 1%; 
+    background-color: #49494b;
     border: 3px solid black;
 }
 
@@ -113,17 +115,21 @@ h2 {
     color: white;
 }
 
-.e {
+.header {
     width: 100%;
-    background-color: forestgreen; 
+    background-color: #e6dbc9;
+    height: 20vh; 
 }
 
 /* Image 1 */
 
-.a {
-    padding: 20px 100px 10px 20px;
-    width: 43%;
-    height: auto;
+.MainImg {
+    background-image:url('My Portfolio Pictures/118358729_2754926151410713_4618262042568289918_n.jpg');
+    width: 100%;
+    background-size: cover;
+    background-repeat:no-repeat;
+    background-attachment: fixed;
+    height: 40vh;
 }
 /*  */
 
@@ -132,17 +138,15 @@ h2 {
 }
 
 .c {
-    width: fit-content;
+    display: flex;
+    align-items: right;
+    font-size: 1rem;
+    padding: 5% 23%;
+    text-align: center;
+    width: 65%;
     display: flex;
     flex-direction: column;
 }
-
-.d {
-    padding: 5.5%;
-    width: 60%;
-    display: flex;
-    flex-wrap: wrap; 
-   } 
 
    .f {
        display:flex;
@@ -170,7 +174,14 @@ h2 {
    }
 
    .i {
-       background: rgb(143, 81, 22);
+    padding: .1%;
+    text-align: center;
+    width: 50%;
+    border-radius: 50%;
+    display: flex;
+    align-items: right;
+    flex-wrap: wrap; 
+    background:#0db4b9 ;
    }
 
    .j {
@@ -184,8 +195,18 @@ h2 {
 
    .button3 {
     margin: 0px 7px 100px 50px;
-    color: rgb(192, 132, 3);
+    color: #FF5A09 ;
     padding: 10px 20px 10px 20px; 
-    background-color: #515554;
+    background-color:  #393939;
     border: 3px solid black;
    }
+
+   .color-design {
+       background:#A997DF;
+   }
+
+   /* @media (max-width: 800px){
+       .d {
+           
+       }
+   } */
