--- a/style/index.css
+++ b/style/index.css
@@ -72,6 +72,10 @@ h1 {
 }
 
 a {
+    color: #FC4A1A ;
+    padding: 5px 5px 5px 5px; 
+    background-color:#49494b;
+    border: 3px solid black;
     text-align: center;
     text-decoration: none;
 }
@@ -90,12 +94,12 @@ h2 {
     padding: 1% 25%;
 }
 
-.button {
+/* .button {
     color: #FC4A1A ;
     padding: 5px 5px 5px 5px; 
     background-color:#49494b;
     border: 3px solid black;
-}
+} */
 .button2 {
     text-align: center;
     margin: 1.5% 2.5%;
@@ -124,7 +128,7 @@ h2 {
 /* Image 1 */
 
 .MainImg {
-    background-image:url('My Portfolio Pictures/118358729_2754926151410713_4618262042568289918_n.jpg');
+    background-image:url('118358729_2754926151410713_4618262042568289918_n.jpg');
     width: 100%;
     background-size: cover;
     background-repeat:no-repeat;
@@ -132,23 +136,7 @@ h2 {
     height: 40vh;
 }
 /*  */
-
-.b {
-    display: flex;
-}
-
-.c {
-    display: flex;
-    align-items: right;
-    font-size: 1rem;
-    padding: 5% 23%;
-    text-align: center;
-    width: 65%;
-    display: flex;
-    flex-direction: column;
-}
-
-   .f {
+    .f {
        display:flex;
        flex-direction: row;
        justify-content: space-between;
@@ -173,14 +161,11 @@ h2 {
        flex-direction: column;
    }
 
-   .i {
-    padding: .1%;
-    text-align: center;
-    width: 50%;
-    border-radius: 50%;
+   .info {
+    width: 100%;
     display: flex;
-    align-items: right;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
+    align-items: center; 
     background:#0db4b9 ;
    }
 
