--- a/style/index.css
+++ b/style/index.css
@@ -33,7 +33,8 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1.5;
+    font-size: .8rem;
 }
 ol, ul {
 	list-style: none;
@@ -73,11 +74,16 @@ h1 {
 
 a {
     color: #FC4A1A ;
-    padding: 5px 5px 5px 5px; 
+    padding: 1% 2%; 
     background-color:#49494b;
     border: 3px solid black;
     text-align: center;
     text-decoration: none;
+}
+
+a:hover {
+    background-color: black;
+    color: #bd8c7d;
 }
 
 nav {
@@ -94,48 +100,12 @@ h2 {
     padding: 1% 25%;
 }
 
-/* .button {
-    color: #FC4A1A ;
-    padding: 5px 5px 5px 5px; 
-    background-color:#49494b;
-    border: 3px solid black;
-} */
-.button2 {
-    text-align: center;
-    margin: 1.5% 2.5%;
-    color: #FC4A1A;
-    padding: 1%; 
-    background-color: #49494b;
-    border: 3px solid black;
-}
-
-.button:hover {
-    background-color: black;
-    color: white;
-}
-
-.button2:hover {
-    background-color: black;
-    color: white;
-}
-
 .header {
     width: 100%;
     background-color: #e6dbc9;
     height: 20vh; 
 }
 
-/* Image 1 */
-
-.MainImg {
-    background-image:url('118358729_2754926151410713_4618262042568289918_n.jpg');
-    width: 100%;
-    background-size: cover;
-    background-repeat:no-repeat;
-    background-attachment: fixed;
-    height: 40vh;
-}
-/*  */
     .f {
        display:flex;
        flex-direction: row;
@@ -164,9 +134,13 @@ h2 {
    .info {
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
     align-items: center; 
     background:#0db4b9 ;
+   }
+
+   .info img {
+       padding:1%;
+       width: 50%;
    }
 
    .j {
@@ -178,20 +152,13 @@ h2 {
        margin: 50px 7px 0px 10px;
    }
 
-   .button3 {
-    margin: 0px 7px 100px 50px;
-    color: #FF5A09 ;
-    padding: 10px 20px 10px 20px; 
-    background-color:  #393939;
-    border: 3px solid black;
-   }
-
    .color-design {
        background:#A997DF;
    }
 
-   /* @media (max-width: 800px){
-       .d {
-           
+   @media (max-width: 800px){
+       .info {
+        display: flex;
+        flex-direction: column;
        }
-   } */
+   }
