--- a/style/index.css
+++ b/style/index.css
@@ -34,7 +34,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1.5;
-    font-size: .8rem;
+    font-size: 1rem;
 }
 ol, ul {
 	list-style: none;
@@ -68,13 +68,13 @@ html {
 h1 {
     text-shadow:5px 5px 10px black;
     font-size: 200%;
-    padding: 1.5%;
+    padding: 0 1.5%;
     font-weight: 900;
 }
 
 a {
-    color: #FC4A1A ;
-    padding: 1% 2%; 
+    color: #FC4A1A;
+    padding: 1% 4%; 
     background-color:#49494b;
     border: 3px solid black;
     text-align: center;
@@ -87,10 +87,11 @@ a:hover {
 }
 
 nav {
-    padding:0 4%;
+    height:100vh;
+    margin:-1% 0;
+    padding:1% 4%;
     width:28%;
-    height: auto;
-    display: flex;
+    height: 0 auto;
 }
 
 h2 {
@@ -103,39 +104,24 @@ h2 {
 .header {
     width: 100%;
     background-color: #e6dbc9;
-    height: 20vh; 
+    Padding:1.5%;
+    height: 17vh;
 }
-
-    .f {
-       display:flex;
-       flex-direction: row;
-       justify-content: space-between;
-   }
-
-   .container {
-        padding: 20px;
-        width: 200px;
-        height: 200px;
-   }
-
-   .g {
-       display:flex;
-       flex-direction: row;
-       justify-content: space-between;
-   }
-       
-   .h {
-       font-weight: 900;
-       text-align: center;
-       display: flex;
-       flex-direction: column;
-   }
-
+    
    .info {
+    padding: 1.5%;
     width: 100%;
     display: flex;
     align-items: center; 
     background:#0db4b9 ;
+   }
+
+   .info a{
+      margin: 25% 10%;
+   }
+
+   p {
+       padding: 10%;
    }
 
    .info img {
@@ -143,23 +129,99 @@ h2 {
        width: 50%;
    }
 
-   .j {
+   .projects {
+       display: flex;
+       flex-wrap: wrap;
+       justify-content: space-between;
+       padding:2%;
+       background:#A997DF; 
+   }
+   
+   .projects div img {
+       width:300px;
+       border-radius: 10px;
+
+   }
+
+   h3 {
+    font-size: 1rem;
+    text-align: center;
+   }
+
+   .j a{
        font-size: 140%;
        font-weight: 900;
        text-align: center;
        display: flex;
        flex-direction: column;
-       margin: 50px 7px 0px 10px;
+       margin:0 35%;
+       background-color: #e6dbc9;
+   }
+   .color-design {
+    background:#a39274;
    }
 
-   .color-design {
-       background:#A997DF;
+   h4 {
+       font-weight: 900;
+       font-size: 1.5rem;
+       text-align: center;
    }
+
+   /* .k {
+    background-color: #e6dbc9;
+   } */
+
+   /* .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+   } */
 
    @media (max-width: 800px){
-       .info {
-        display: flex;
+        .info {
         flex-direction: column;
+        align-items: center;
+       }
+       .header {
+           height:24vh;
        }
    }
-   /* Info section is now working, needs @media */
+
+   @media (max-width: 500px) {
+        .header {
+            width: 100%;
+            height: 45vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        nav { 
+           width: auto;   
+           display: flex;
+           flex-direction: column;
+           align-items: center;
+       }
+        body {
+           width: 100%; 
+
+       }
+       a {
+           padding:2% 10%;
+       }
+
+       footer div a{
+           margin:0 50% ;
+           padding: 0 17%;
+           text-align: center;
+           align-items: center;
+           display: flex;
+           flex-direction: row;
+       }
+       
+
+
+   }
+   /* Info section is now working, needs @mediag */
