--- a/style/index.css
+++ b/style/index.css
@@ -87,13 +87,13 @@ audio,
 video {
   margin: 0;
   padding: 0;
-  /* border: 0;
+  border: 0;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
- article,
+article,
 aside,
 details,
 figcaption,
@@ -127,9 +127,60 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-} 
+}
 /* End reset */
+
+/* * {
+  border: 1px solid yellow;
+} */
+body {
+  background: #404040;
+}
+
+.top {
+  padding: 2%;
+  background: #5f4c4c;
+}
 
 .container {
   display: flex;
+  justify-content: flex-end;
+  margin: 2%;
+}
+
+nav a button {
+  background: #c5aa6a;
+  font-size: 2rem;
+}
+
+button:hover {
+  transition: 2s;
+  background: saddlebrown;
+}
+
+h1 {
+  margin-right: auto;
+  font-size: 2rem;
+  color: #c5aa6a;
+}
+
+.gallery {
+  margin: 20px;
+  padding: 0 20%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+.gallery2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 3%;
+}
+.gallery2,
+button {
+  text-align: center;
+  padding: 3%;
 }
