--- a/style/index.css
+++ b/style/index.css
@@ -160,8 +160,24 @@ button:hover {
 
 h1 {
   margin-right: auto;
-  font-size: 2rem;
+  font-size: 4rem;
+  font-weight: 900;
   color: #c5aa6a;
+}
+
+.MainImg {
+  display: flex;
+  justify-content: center;
+  padding: 5%;
+}
+
+.ImgText {
+  font-size: 2rem;
+  color: #ea6d09;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .gallery {
@@ -183,4 +199,35 @@ h1 {
 button {
   text-align: center;
   padding: 3%;
+}
+
+footer {
+  background: #5f4c4c;
+}
+
+footer,
+button {
+  text-align: center;
+  padding: 20px 40px;
+  font-size: 1.6rem;
+}
+
+.b {
+  margin: 5%;
+  background: #c5aa6a;
+}
+
+.c {
+  background: #c5aa6a;
+}
+
+.b:hover {
+  transition: 2s;
+  background: saddlebrown;
+}
+
+h2 {
+  color: #c5aa6a;
+  padding: 2%;
+  font-size: 2.2rem;
 }
