--- a/style/index.css
+++ b/style/index.css
@@ -231,3 +231,18 @@ h2 {
   padding: 2%;
   font-size: 2.2rem;
 }
+
+@media (max-width: 800px) {
+  body {
+    width: 100%;
+  }
+  header a {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+  }
+  a {
+    display: flex;
+    flex-direction: column;
+  }
+}
