--- a/style/index.css
+++ b/style/index.css
@@ -133,24 +133,44 @@ table {
 /* * {
   border: 1px solid yellow;
 } */
+
 body {
   background: #404040;
 }
 
-.top {
-  padding: 2%;
-  background: #5f4c4c;
-}
-
-.container {
+/* .container {
   display: flex;
   justify-content: flex-end;
   margin: 2%;
+} */
+/* Header/nav/button */
+header {
+  background: #5f4c4c;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 1.5%;
+  padding-bottom: 1.5%;
+}
+
+nav {
+  display: flex;
+  justify-content: flex-end;
+  width: 60%;
 }
 
 nav a button {
   background: #c5aa6a;
   font-size: 2rem;
+}
+
+button {
+  background: #c5aa6a;
+  text-align: center;
+  font-size: 1.6rem;
+  padding: 15px 50px;
+  border-radius: 20px;
 }
 
 button:hover {
@@ -159,34 +179,54 @@ button:hover {
 }
 
 h1 {
-  margin-right: auto;
+  margin-left: -5%;
   font-size: 4rem;
   font-weight: 900;
   color: #c5aa6a;
+  width: 35%;
+  text-align: center;
+}
+
+/* Display Img */
+
+.imgContainer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .MainImg {
+  background: url("https://picsum.photos/200/300");
+  height: 50vh;
+  width: 83%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
+  align-items: center;
   justify-content: center;
-  padding: 5%;
+  flex-wrap: wrap;
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
 
 .ImgText {
-  font-size: 2rem;
-  color: #ea6d09;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
 }
 
+h3 {
+  font-size: 3rem;
+  margin-bottom: 10%;
+}
+
+/* Main Content */
+
 .gallery {
-  margin: 20px;
-  padding: 0 20%;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin: 0 auto;
+  justify-content: space-evenly;
 }
 
 .gallery2 {
@@ -194,36 +234,24 @@ h1 {
   flex-direction: column;
   justify-content: space-between;
   padding: 3%;
-}
-.gallery2,
-button {
   text-align: center;
-  padding: 3%;
 }
+
+.gallery2 button {
+  margin-top: 12%;
+}
+
+/* Contact Info */
 
 footer {
   background: #5f4c4c;
 }
 
-footer,
-button {
-  text-align: center;
-  padding: 20px 40px;
-  font-size: 1.6rem;
-}
-
-.b {
-  margin: 5%;
-  background: #c5aa6a;
-}
-
-.c {
-  background: #c5aa6a;
-}
-
-.b:hover {
-  transition: 2s;
-  background: saddlebrown;
+.button {
+  height: 15vh;
+  margin-left: 44%;
+  display: flex;
+  align-items: center;
 }
 
 h2 {
@@ -232,17 +260,55 @@ h2 {
   font-size: 2.2rem;
 }
 
+/* Media */
+
 @media (max-width: 800px) {
-  body {
+  nav {
     width: 100%;
-  }
-  header a {
     text-decoration: none;
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
-  a {
+
+  nav button {
+    width: 225px;
+  }
+
+  h1 {
+    margin-left: 5%;
+  }
+
+  .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 6%;
+  }
+
+  .button {
+    margin-left: 35.2%;
+  }
+}
+
+@media (max-width: 500px) {
+  header {
     display: flex;
     flex-direction: column;
+    padding-bottom: 4%;
+  }
+
+  h1 {
+    margin-left: -30%;
+    margin-bottom: 4%;
+  }
+
+  .gallery {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .button {
+    margin-left: 27%;
   }
 }
